fix mobile positioning, add touch-action='none' while dragging on mobile

--- a/src/component/window.styl
+++ b/src/component/window.styl
@@ -18,6 +18,9 @@ body
 .q-window
   color currentColor
 
+  &__touch-action
+    touch-action none
+
   &__dragging
     box-shadow none
 
